--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.3.0",
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.1",
+    "astro-compressor": "^1.0.0",
     "tailwindcss": "^4.1.3"
   }
 }
