--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "astro": "^5.6.1",
     "astro-compressor": "^1.0.0",
     "tailwindcss": "^4.1.3"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.86.3"
   }
 }
