--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.1",
     "astro-compressor": "^1.0.0",
+    "marked": "^15.0.8",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
